fixed letter spacing on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -544,17 +544,13 @@ video {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-7xl {
-  font-size: 4.5rem;
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 .font-bold {
   font-weight: 700;
@@ -567,7 +563,6 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 html,
 body {
   margin: 0px;
@@ -581,5 +576,18 @@ body {
 }
 
 h1, h2{
-  letter-spacing: -0.08em;
+  letter-spacing: -0.05em;
+}
+
+@media (min-width: 768px) {
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
 }
